Fix dark mode page bands around game area

--- a/style/main.scss
+++ b/style/main.scss
@@ -487,6 +487,7 @@ hr {
 }
 
 
+html.dark-mode,
 body.dark-mode {
   background: #000000;
   color: #e5e7eb;
